test/main/com/ocaml/sdk/output/errors/samples/type/f3.ml
(*
Error: This expression has type int but an expression was expected of type int32 Hint: Did you mean `43l'?
*)
let _ : int32 * int32 = 42l, 43;;